# Finite-Element-Solver-Development-for-Fruit-Tree

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
apps/: README.md  orchard_cli.cpp
config/: conda_environment_commands.txt  default_solver_settings.json  external_environment_checks.txt  fenicsx_pinn_environment.yml  ubuntu24_test_dependencies.txt
docs/: README.md  cpp_migration_inventory.md  design.md  design_fenicsx_pinn_refactor.md  development.md  getting_started.md  input_format.md  legacy_reference.md  orchard_fem_architecture.md  python_first_architecture.md  solver_roadmap.md  verification.md
examples/: demo_orchard.json  demo_orchard_time_history.json
include/: README.md
include/orchard_solver/: Common.h  OrchardModel.h
include/orchard_solver/branches/: BranchModel.h
include/orchard_solver/cross_section/: CrossSection.h
include/orchard_solver/discretization/: Assembler.h  BeamElement.h
include/orchard_solver/excitation_and_bc/: Excitation.h
include/orchard_solver/fruits/: Fruit.h
include/orchard_solver/geometry_topology/: TreeTopology.h
include/orchard_solver/io/: ModelIO.h  SimpleJson.h
include/orchard_solver/joints_and_bifurcations/: Joints.h
include/orchard_solver/materials/: Materials.h
include/orchard_solver/model_reduction/: ReductionStrategy.h
include/orchard_solver/solver_core/: DynamicSystem.h  LinearAlgebra.h  StaticPreload.h
include/orchard_solver/validation/: ErrorMetrics.h
orchard_fem/: __init__.py  __main__.py  application.py  cli.py  demo_suite.py  environment.py  error_metrics.py  model.py  validation.py
orchard_fem/__pycache__/: __init__.cpython-313.pyc.1522231059936  __init__.cpython-313.pyc.1660162975200  model.cpython-313.pyc.1404120348688  model.cpython-313.pyc.2818472147056
orchard_fem/automation/: __init__.py  full_validation.py
orchard_fem/branches/: __init__.py
orchard_fem/commands/: __init__.py  demo_suite.py  doctor.py  full_validate.py  legacy_compare.py  modal.py  plot_frequency_response.py  run.py  verify.py  visualize.py
orchard_fem/cross_section/: __init__.py  defaults.py  integrator.py  profile.py  scan_loader.py  tissue.py
orchard_fem/cross_section/__pycache__/: __init__.cpython-313.pyc.2328445795856  integrator.cpython-313.pyc.2589535152656  profile.cpython-313.pyc.1800377649072  tissue.cpython-313.pyc.1660170907088
orchard_fem/discretization/: __init__.py  assembler.py  beam_element.py  damping.py  dofs.py  matrix_ops.py  system.py  types.py
orchard_fem/discretization/beam/: __init__.py  algebra.py  element_matrices.py  local_matrices.py  transforms.py  types.py
orchard_fem/domain/: __init__.py  entities.py  enums.py  parsing.py
orchard_fem/dynamics/: __init__.py  excitation.py  frequency_response.py  nonlinear.py  time_history.py
orchard_fem/elements/: __init__.py  beam_formulation.py
orchard_fem/elements/__pycache__/: __init__.cpython-313.pyc.1657521697776  beam_formulation.cpython-313.pyc.2328450630640
orchard_fem/excitation_and_bc/: __init__.py
orchard_fem/fruits/: __init__.py
orchard_fem/geometry_topology/: __init__.py
orchard_fem/io/: __init__.py  csv_writer.py  json_schema.py  legacy_loader.py  model_loader.py  model_payload.py
orchard_fem/io/__pycache__/: __init__.cpython-313.pyc.1522237982304  __init__.cpython-313.pyc.2298413623328  csv_writer.cpython-313.pyc.2818464327856  json_schema.cpython-313.pyc.1660170131696  legacy_loader.cpython-313.pyc.1660170140336
orchard_fem/io/loaders/: __init__.py  orchard.py  payload.py  topology.py
orchard_fem/joints_and_bifurcations/: __init__.py
orchard_fem/legacy/: __init__.py  compare.py
orchard_fem/materials/: __init__.py  base.py
orchard_fem/materials/__pycache__/: __init__.cpython-313.pyc.1657522944432  base.cpython-313.pyc.2328445214928
orchard_fem/model_reduction/: __init__.py  strategies.py
orchard_fem/numerics/: __init__.py  petsc.py
orchard_fem/postprocess/: __init__.py  frequency_response.py
orchard_fem/solver_core/: __init__.py  dynamic_system.py  modal.py  static_preload.py
orchard_fem/solvers/: __init__.py  _petsc.py  frequency_response.py  modal.py  modal_assembler.py  static_preload.py  time_history.py
orchard_fem/solvers/__pycache__/: __init__.cpython-313.pyc.1657521697632  __init__.cpython-313.pyc.1660170138464  frequency_response.cpython-313.pyc.2320159974192  modal.cpython-313.pyc.1660170137168  (+4 more)
orchard_fem/topology/: __init__.py  geometry.py  graph.py  observations.py  paths.py  tree.py
orchard_fem/verification/: __init__.py  beam_benchmarks.py
orchard_fem/visualization/: __init__.py  app.py  dependencies.py  io.py  model_scene.py  rendering.py
orchard_fem/workflows/: __init__.py  analysis.py  demo.py  validation.py
orchard_pinn/: __init__.py
orchard_pinn/data/: __init__.py
orchard_pinn/inverse/: __init__.py
orchard_pinn/surrogate/: __init__.py
orchard_pinn/utils/: __init__.py  metrics.py
scripts/: benchmark_vs_existing.py  check_python_env.py  plot_frequency_response.py  run_full_validation.sh  run_python_demo_suite.py  visualize_analysis.py
src/: OrchardModel.cpp  README.md
src/branches/: BranchModel.cpp
src/cross_section/: CrossSection.cpp
src/discretization/: Assembler.cpp  BeamElement.cpp
src/geometry_topology/: TreeTopology.cpp
src/io/: ModelIO.cpp  SimpleJson.cpp
src/joints_and_bifurcations/: Joints.cpp
src/materials/: Materials.cpp
src/solver_core/: DynamicSystem.cpp  LinearAlgebra.cpp  StaticPreload.cpp
tests/: orchard_tests.cpp
tests/integration/: test_auto_nonlinear_injection.py  test_cross_section_defaults.py  test_full_validation_automation.py  test_gravity_prestress.py  test_namespace_migration.py  test_python_cli.py  test_python_scaffold.py
tests/verification/: README_legacy_cpp.md  case_cantilever_first_mode.cpp  case_cantilever_gravity_prestress.cpp  case_cantilever_modes.cpp  case_duffing_frequency_response.cpp  case_hinged_two_bar.cpp  case_simple_beam_static.cpp  common.h  test_python_beam_benchmarks.py  test_python_dynamic_benchmarks.py
(+2 files in other folders)
