[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orchard-vibration-solver"
version = "0.1.0"
description = "Orchard FEM framework for orchard tree vibration modeling, simulation, and validation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
orchard-fem = "orchard_fem.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
]
viz = [
  "numpy>=1.26",
  "scipy>=1.11",
  "matplotlib>=3.8",
  "pandas>=2.2",
  "pyyaml>=6.0",
  "jupyterlab>=4.2",
]
ml = [
  "torch>=2.2",
  "h5py>=3.10",
]
ubuntu-test = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "numpy>=1.26",
  "scipy>=1.11",
  "pandas>=2.2",
  "matplotlib>=3.8",
  "pyyaml>=6.0",
  "jupyterlab>=4.2",
]

[tool.setuptools.packages.find]
include = ["orchard_fem*", "orchard_pinn*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
